--- a/contact-us/promoted-contacts.html
+++ b/contact-us/promoted-contacts.html
@@ -15,7 +15,7 @@
     {%- endif %}
     {%- if accessibility_feedback.web != 'None' %}
         <a class="jump-link" href="{{ accessibility_feedback.web }}">
-            {{ accessibility_feedback.web_desc if accessibility_feedback.web_desc != 'None' else accessibility_feedback.web }}<span class="cf-icon cf-icon-right jump-link_icon"></span>
+            {{ accessibility_feedback.web_desc if accessibility_feedback.web_desc != 'None' else accessibility_feedback.web }}
         </a>
     {%- endif %}
     </section>
