Adds govdelivery pages to index.

--- a/index.html
+++ b/index.html
@@ -170,6 +170,22 @@
                         </div>
                     </div>
 
+                    <div class="demo-spaced">
+                        <h2>GovDelivery subscription states</h2>
+                    </div>
+                    <div class="demo-cols">
+                        <div class="demo-col-6 demo-spaced">
+                            <div class="meta-header">
+                                <span class="meta-header_left category-slug">
+                                    Sheer
+                                </span>
+                            </div>
+                            <h3><a href="govdelivery-subscribe/success/">Success page</a></h3>
+                            <h3><a href="govdelivery-subscribe/error/">Error page</a></h3>
+                            <h3><a href="govdelivery-subscribe/server-error/">Server error page</a></h3>
+                        </div>
+                    </div>
+
                 </section>
 
             </section><!-- END .content_main -->
