--- a/newsroom/_single.html
+++ b/newsroom/_single.html
@@ -67,7 +67,7 @@
                             Subscribe to our RSS feed to get the latest content in your reader.
                         </p>
                         <a class="btn" href="/feed/newsroom/">
-                            <!-- <span class="btn-icon-left cf-icon cf-icon-rss"></span> -->
+                            <span class="btn_icon__left cf-icon cf-icon-rss"></span>
                             Subscribe to RSS
                         </a>
                     </div>
