--- a/newsroom/press-resources/index.html
+++ b/newsroom/press-resources/index.html
@@ -268,7 +268,7 @@
                                     Subscribe to our RSS feed to get the latest content in your reader.
                                 </p>
                                 <a class="btn" href="/feed/posts/">
-                                    <!-- <span class="btn-icon-left cf-icon cf-icon-rss"></span> -->
+                                    <span class="btn_icon__left cf-icon cf-icon-rss"></span>
                                     Subscribe to RSS
                                 </a>
                             </div>
