--- a/newsroom/_single.html
+++ b/newsroom/_single.html
@@ -27,6 +27,7 @@
     {% set query = queries.newsroom %}
     {% set post = newsroom %}
     {% set path = '/newsroom/' %}
+    {% set rss_path = '/feed/newsroom/' %}
 
     {% import "post-macros.html" as post_macros with context %}
 
@@ -63,13 +64,7 @@
                         {% include "email-subscribe-form.html" %}
                     </div>
                     <div class="content_block__sub">
-                        <p class="short-desc">
-                            Subscribe to our RSS feed to get the latest content in your reader.
-                        </p>
-                        <a class="btn" href="/feed/newsroom/">
-                            <span class="btn_icon__left cf-icon cf-icon-rss"></span>
-                            Subscribe to RSS
-                        </a>
+                        {% include "rss.html" %}
                     </div>
                 </section>
             </aside><!-- END .content_sidebar -->
