--- a/newsroom/index.html
+++ b/newsroom/index.html
@@ -38,6 +38,7 @@
        some functions already developed for blog. #}
     {% set posts = newsroom %}
     {% set path = '/newsroom/' %}
+    {% set rss_path = '/feed/newsroom/' %}
 
     {# Get the latest watchroom post. #}
     {% set watchroom = queries.watchroom.search_with_url_arguments(size=1) %}
@@ -79,13 +80,7 @@
                                 {% include "email-subscribe-form.html" %}
                             </div>
                             <div class="content_block__sub content-l_col content-l_col-1-2">
-                                <p class="short-desc">
-                                    Subscribe to our RSS feed to get the latest content in your reader.
-                                </p>
-                                <a class="btn" href="/feed/newsroom/">
-                                    <span class="btn_icon__left cf-icon cf-icon-rss"></span>
-                                    Subscribe to RSS
-                                </a>
+                                {% include "rss.html" %}
                             </div>
                         </div>
                     </section>
