Updated to use cf-core.

--- a/blog_static/landing.html
+++ b/blog_static/landing.html
@@ -166,13 +166,13 @@
                 <div class="expandable expandable__expanded">
                     <div class="expandable_header expandable_header__spaced">
                         <div class="expandable_header-right expandable_header-right__float-on-medium">
-                            <button class="expandable_target btn btn-secondary">
+                            <button class="expandable_target btn btn__secondary">
                                 Filter posts
                                 <span class="expandable_cue-open">
-                                    <span class="btn-icon-right cf-icon cf-icon-down"></span>
+                                    <span class="btn_icon__right cf-icon cf-icon-down"></span>
                                 </span>
                                 <span class="expandable_cue-close">
-                                    <span class="btn-icon-right cf-icon cf-icon-up"></span>
+                                    <span class="btn_icon__right cf-icon cf-icon-up"></span>
                                 </span>
                             </button>
                         </div>
@@ -447,7 +447,7 @@
                                 </div> <!-- END .form-l__flush -->
 
                                 <div class="form-actions form-actions__right-on-med">
-                                    <input class="btn btn-warning btn-link form-actions_item js-form_clear"
+                                    <input class="btn btn__warning btn__link form-actions_item js-form_clear"
                                            type="button"
                                            value="Clear filters">
                                     <input class="btn form-actions_item"
@@ -565,12 +565,12 @@
                          aria-label="Pagination"
                          data-ajax-action="posts-paginated.html">
                         <a class="btn pagination_prev" href="#pagination_content">
-                            <span class="btn-icon-left cf-icon cf-icon-left"></span>
+                            <span class="btn_icon__left cf-icon cf-icon-left"></span>
                             Newer
                         </a>
                         <a class="btn pagination_next" href="#pagination_content">
                             Older
-                            <span class="btn-icon-right cf-icon cf-icon-right"></span>
+                            <span class="btn_icon__right cf-icon cf-icon-right"></span>
                         </a>
                         <form class="pagination_form" action="#pagination_content">
                             <label class="pagination_label" for="pagination_current-page">
@@ -591,7 +591,7 @@
                                     of 10
                                 </span>
                             </span>
-                            <button class="btn btn-link pagination_submit" id="pagination_submit" type="submit">
+                            <button class="btn btn__link pagination_submit" id="pagination_submit" type="submit">
                                 Go
                             </button>
                         </form>
