--- a/index.html
+++ b/index.html
@@ -314,6 +314,16 @@
 <footer class="footer" role="contentinfo">
 </footer>
 
+<script src="/static/js/main.min.js"></script>
+<script>
+$(document).ready(function() {
+    // Hide Sheer links if this is being viewed on GitHub pages.
+    if ( window.location.host.indexOf('.github.io') >= 0 ) {
+        $('.demo-sheer-link').hide();
+    }
+});
+</script>
+
 </body>
 
 </html>
