--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
 <footer class="footer" role="contentinfo">
 </footer>
 
-<script src="/static/js/main.min.js"></script>
+<script src="static/js/main.min.js"></script>
 <script>
 $(document).ready(function() {
     // Hide Sheer links if this is being viewed on GitHub pages.
