Updates class on filter control area.

--- a/contact-us/contact-list.html
+++ b/contact-us/contact-list.html
@@ -1,7 +1,7 @@
 
 <div class="expandable-group type-and-filter" data-accordion="true">
 
-    <div class="js-type-and-filter_controls">
+    <div class="u-js-only">
         <p class="h2">
             Looking for something more specific?
         </p>
