Updates html formatting.

--- a/contact-us/contact-list.html
+++ b/contact-us/contact-list.html
@@ -1,7 +1,7 @@
 
 <div class="expandable-group type-and-filter" data-accordion="true">
 
-    <div class="u-js-only">
+    <div class="u-js-only content_block content_block__flush-top">
         <p class="h2">
             Looking for something more specific?
         </p>
@@ -11,7 +11,7 @@
         <input class="js-type-and-filter_input" type="text" placeholder="Filter contacts by keyword">
     </div>
 
-    <div class="content_block">
+    <div class="content_block content_block__flush-top">
         <div class="expandable-group_header">
             Office name
         </div>
