Fixes contacts after wp json changed.

--- a/contact-us/general-inqueries.html
+++ b/contact-us/general-inqueries.html
@@ -7,27 +7,27 @@
     {{ general_inqueries.sitewide_desc }}
 </p>
 <ul class="list list__icons">
-{%- if general_inqueries.email %}
+{%- if general_inqueries.email_addr %}
     <li class="list_item u-break-word">
         <span class="cf-icon cf-icon-email list_icon"></span>
-        <a class="list_link" href="mailto:{{ general_inqueries.email }}">
-            {{ general_inqueries.email }}
+        <a class="list_link" href="mailto:{{ general_inqueries.email_addr }}">
+            {{ general_inqueries.email_addr }}
         </a>
     </li>
 {%- endif %}
-{%- if general_inqueries.phone %}
+{%- if general_inqueries.phone_num %}
     <li class="list_item">
         <span class="cf-icon cf-icon-phone list_icon"></span>
         <span class="short-desc">
-            {{ macros.format_phone(general_inqueries.phone) }}
+            {{ macros.format_phone(general_inqueries.phone_num) }}
         </span>
     </li>
 {%- endif %}
-{%- if general_inqueries.fax %}
+{%- if general_inqueries.fax_num %}
     <li class="list_item">
         <span class="cf-icon cf-icon-fax list_icon"></span>
         <span class="short-desc">
-            {{ macros.format_phone(general_inqueries.fax) }}
+            {{ macros.format_phone(general_inqueries.fax_num) }}
         </span>
     </li>
 {%- endif %}                            
