--- a/contact-us/submit-a-complaint.html
+++ b/contact-us/submit-a-complaint.html
@@ -9,10 +9,10 @@
 <div class="content-l">
     <div class="content-l_col content-l_col-1-2">
         <ul class="list list__unstyled">
-        {%- if submit_a_complaint.phone %}
+        {%- if submit_a_complaint.phone_num %}
             <li class="list_item short-desc">
                 <span class="cf-icon cf-icon-phone list_icon"></span>
-                {{ macros.format_phone(submit_a_complaint.phone) }}
+                {{ macros.format_phone(submit_a_complaint.phone_num) }}
             {%- if submit_a_complaint.phone_desc %}
                 <span class="micro-copy micro-copy__large">
                     {{ submit_a_complaint.phone_desc }}
@@ -20,10 +20,10 @@
             {%- endif %}
             </li>
         {%- endif %}
-        {%- if submit_a_complaint.phone_2 %}
+        {%- if submit_a_complaint.phone_2_num %}
             <li class="list_item short-desc">
                 <span class="cf-icon cf-icon-phone list_icon"></span>
-                {{ macros.format_phone(submit_a_complaint.phone_2) }}
+                {{ macros.format_phone(submit_a_complaint.phone_2_num) }}
             {%- if submit_a_complaint.phone_2_desc %}
                 <span class="micro-copy micro-copy__large">
                     {{ submit_a_complaint.phone_2_desc }}
@@ -41,8 +41,8 @@
     {%- endif %}
     </div>
 </div>
-{%- if submit_a_complaint.web %}
-<a class="jump-link" href="{{ submit_a_complaint.web }}">
-    {{ submit_a_complaint.web_desc if submit_a_complaint.web_desc else submit_a_complaint.web }}
+{%- if submit_a_complaint.web_addr %}
+<a class="jump-link" href="{{ submit_a_complaint.web_addr }}">
+    {{ submit_a_complaint.web_desc if submit_a_complaint.web_desc else submit_a_complaint.web_addr }}
 </a>
 {%- endif %}
