Adds filter by button option and clear button to contact filtering.

--- a/contact-us/contact-list.html
+++ b/contact-us/contact-list.html
@@ -9,6 +9,8 @@
             Type in the office, product, blah lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta cumque perspiciatis delectus ipsa illo praesentium quos omnis nemo quia itaque reprehenderit consequatur totam velit quisquam eos expedita ea sit vel.
         </p>
         <input class="js-type-and-filter_input" type="text" placeholder="Filter contacts by keyword">
+        <button class="js-type-and-filter_clear btn btn__super btn__link btn__warning">Clear</button>
+        <button class="js-type-and-filter_button btn btn__super">Filter</button>
     </div>
 
     <div class="content_block content_block__flush-top expandable-group" data-accordion="true">
