Adds pattern for input with button.

--- a/contact-us/contact-list.html
+++ b/contact-us/contact-list.html
@@ -8,9 +8,15 @@
         <p class="short-desc">
             Type in the office, product, blah lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta cumque perspiciatis delectus ipsa illo praesentium quos omnis nemo quia itaque reprehenderit consequatur totam velit quisquam eos expedita ea sit vel.
         </p>
-        <input class="js-type-and-filter_input" type="text" placeholder="Filter contacts by keyword">
+        <div class="input-with-btn">
+            <div class="input-with-btn_input">
+                <input class="js-type-and-filter_input input__super" type="text" placeholder="Filter contacts by keyword">
+            </div>
+            <div class="input-with-btn_btn">
+                <button class="js-type-and-filter_button btn btn__super">Filter</button>
+            </div>
+        </div>
         <button class="js-type-and-filter_clear btn btn__super btn__link btn__warning">Clear</button>
-        <button class="js-type-and-filter_button btn btn__super">Filter</button>
     </div>
 
     <div class="content_block content_block__flush-top expandable-group" data-accordion="true">
