--- a/contact-us/contact-list.html
+++ b/contact-us/contact-list.html
@@ -9,14 +9,17 @@
             Type in the office, product, blah lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta cumque perspiciatis delectus ipsa illo praesentium quos omnis nemo quia itaque reprehenderit consequatur totam velit quisquam eos expedita ea sit vel.
         </p>
         <div class="input-with-btn">
-            <div class="input-with-btn_input">
+            <div class="input-with-btn_input btn-inside-input">
                 <input class="js-type-and-filter_input input__super" type="text" placeholder="Filter contacts by keyword">
+                <button class="js-type-and-filter_clear btn btn__super btn__link btn__secondary">
+                    Clear
+                    <span class="cf-icon cf-icon-delete"></span>
+                </button>
             </div>
             <div class="input-with-btn_btn">
                 <button class="js-type-and-filter_button btn btn__super">Filter</button>
             </div>
         </div>
-        <button class="js-type-and-filter_clear btn btn__super btn__link btn__warning">Clear</button>
     </div>
 
     <div class="content_block content_block__flush-top expandable-group" data-accordion="true">
