Adds results count.

--- a/contact-us/contact-list.html
+++ b/contact-us/contact-list.html
@@ -20,6 +20,7 @@
                 <button class="js-type-and-filter_button btn btn__super">Filter</button>
             </div>
         </div>
+        <div class="js-type-and-filter_message"></div>
     </div>
 
     <div class="content_block content_block__flush-top expandable-group" data-accordion="true">
