--- a/contact-us/contact-list.html
+++ b/contact-us/contact-list.html
@@ -20,10 +20,12 @@
                 <button class="js-type-and-filter_button btn btn__super">Filter</button>
             </div>
         </div>
-        <div class="js-type-and-filter_message"></div>
+        <p class="js-type-and-filter_message h3"></p>
     </div>
 
-    <div class="content_block content_block__flush-top expandable-group" data-accordion="true">
+    <div class="content_block content_block__flush-top expandable-group"
+         data-accordion="true"
+         id="contact-list">
         <div class="expandable-group_header">
             Office name
         </div>
