--- a/contact-us/contact-list.html
+++ b/contact-us/contact-list.html
@@ -23,9 +23,7 @@
         <p class="js-type-and-filter_message h3"></p>
     </div>
 
-    <div class="content_block content_block__flush-top expandable-group"
-         data-accordion="true"
-         id="contact-list">
+    <div class="content_block content_block__flush-top expandable-group" data-accordion="true">
         <div class="expandable-group_header">
             Office name
         </div>
