--- a/the-bureau/about-rich-cordray/index.html
+++ b/the-bureau/about-rich-cordray/index.html
@@ -1,48 +1,24 @@
-{% extends "base.html" %}
+{% extends "bio.html" %}
+
+{# Variables #}
+
+{% set active_item_id = 'about-rich-cordray' -%}
+{% set bio_name = 'Richard Cordray' %}
+
+{# Block overrides #}
 
 {% block demo_title -%}
-    About Richard Cordray
+    About {{ bio_name }}
 {%- endblock %}
 
 {% block title -%}
-    About Richard Cordray
+    About {{ bio_name }}
 {%- endblock %}
 
 {% block desc -%}
-    Information about Richard Cordray
+    Information about {{ bio_name }}
 {%- endblock %}
 
-{% block content %}
-
-    {# Variables #}
-
-    {% set path = '/the-bureau/' %}
-    {% set active_page = 'about-rich-cordray' %}
-
-    {# Macros #}
-
-    {% import "post-macros.html" as post_macros with context %}
-
-
-    <main class="content content__1-3" id="main" role="main">
-
-        <!-- .content_bar must come after .content_hero but before .content_wrapper -->
-        <div class="content_bar"></div>
-
-        <div class="wrapper content_wrapper">
-
-            <aside class="content_sidebar content__flush-all-on-small">
-                {% include "nav.html" %}
-            </aside>
-
-            <div class="content_main content__flush-bottom content__flush-top-on-small">
-                <section>
-                    About Rich
-                </section>
-            </div><!-- END .content_main -->
-
-        </div><!-- END .content_wrapper -->
-
-    </main><!-- END .content -->
-
-{% endblock content %}
+{% block bio %}
+    <h1>{{ bio_name }}</h1>
+{% endblock %}
